# arrrpm

./: Cargo.toml  README.md
.github/workflows/: release.yml
arrrpm/: Cargo.toml  README.md
arrrpm/src/: main.rs
rpm-deps/: Cargo.toml  README.md
rpm-deps/src/: main.rs
src/: main.rs
