[package]
name = "arrrpm"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
glob = "0.3.1"
indent = "0.1.1"
petgraph = { version = "0.6.4", default-features = false }
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.2"
rpm = "0.18.2"
